ml inference ingest processor support for local models (#2508)
* ml inference ingest processor support for local models

Signed-off-by: Bhavana Ramaram <rbhavna@amazon.com>